[package]
name = "pebble_query"
version = "0.1.0"
edition = "2021"
authors = ["Bo An"]
license = "MIT"
description = "A helper library for SeaOrm to parse execute, and return standard DTOs with query metadata."
repository = "https://github.com/boan-anbo/pebble_query.git"
readme = "README.md"
keywords = ["sea-orm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm={version = "0.12.3", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "mock",
    "macros",
    "debug-print",
    "uuid"
]}
thiserror = "1.0.37"
convert_case = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
prost = "0.12.1"